--- a/style.css
+++ b/style.css
@@ -105,23 +105,21 @@ footer {
 }
 .slider {
   height: 70vh;
-  overflow: hidden;
   position: relative;
+  overflow: hidden;
 }
 
 .slide {
-  position: absolute;
-  inset: 0;
+  width: 100%;
+  height: 70vh;
   background-size: cover;
   background-position: center;
-  opacity: 0;
-  transition: opacity 1s ease-in-out;
+  display: none;
 }
 
 .slide.active {
-  opacity: 1;
+  display: block;
 }
-
 .overlay {
   background: rgba(0,0,0,0.45);
   height: 100%;
