--- a/style.css
+++ b/style.css
@@ -244,3 +244,43 @@ section {
   background: #fdd835;
   transform: scale(1.05);
 }
+/* SLIDER */
+.slider {
+  position: relative;
+  height: 75vh;
+  overflow: hidden;
+}
+
+.slide {
+  position: absolute;
+  inset: 0;
+  background-size: cover;
+  background-position: center;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+.slide.active {
+  opacity: 1;
+}
+
+.overlay {
+  background: rgba(0,0,0,0.45);
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  text-align: center;
+  padding: 20px;
+}
+
+.overlay h2 {
+  font-size: 44px;
+  margin-bottom: 10px;
+}
+
+.overlay p {
+  font-size: 20px;
+}
